# credential-manager

./: .gitignore  CMakeLists.txt  README.md
CredentialManagementLib/include/: cred_management.hpp  json_storage.hpp  storage_interfaces.hpp
CredentialManagementLib/src/: cred_management.cpp  json_storage.cpp
credential_management_lib/: CMakeLists.txt
credential_management_lib/include/: cred_management.hpp  json_storage.hpp  sqlite_storage.hpp  storage_interfaces.hpp
credential_management_lib/src/: CMakeLists.txt  json_storage.cpp  sourceList.cmake  sqlite_storage.cpp
src/: CMakeLists.txt  main.cpp  sourceList.cmake
